welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: ']' expected but '(' found.
  var T = new Array[Int(num)];
                       ^